paraview: avoid file conflict with VTK
Fixes #22149.

--- a/mingw-w64-paraview/PKGBUILD
+++ b/mingw-w64-paraview/PKGBUILD
@@ -4,7 +4,7 @@ _realname=paraview
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=5.13.1
-pkgrel=2
+pkgrel=3
 pkgdesc="Parallel Data Analysis and Visualization Application based on VTK. (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -64,12 +64,14 @@ source=("https://www.paraview.org/files/v${pkgver%.*}/ParaView-v${pkgver}.tar.xz
         "001-dll-export-some-vtk-functions.patch"
         "002-no-exact-version-for-fast_float.patch"
         "003-CellAttribute-Fix-mingw-build.patch::https://gitlab.kitware.com/vtk/vtk/-/commit/5a7de249.patch"
-        "004-fix-build-with-fmt-11.patch")
+        "004-fix-build-with-fmt-11.patch"
+        "005-avoid-file-conflict-with-vtk.patch")
 sha256sums=('a16503ce37b999c2967d84234596e7bf67ac98221851a288bb1399c7e1dc2004'
             'a9b9292be90c259f0aa058e3f4a7a08b6218f20e6cb2a71e214acda2d2302a50'
             '411b0521fcd2864acae0af20ba6334f69f7c605c9e31996529f64aa749d61065'
             '784d9345ebb1a83841970df34d743344189604457270df0f594669639a718ec8'
-            'c92343b01c50a93805c7068058416cf010cceba6700e4cc16b3be98598d2295f')
+            'c92343b01c50a93805c7068058416cf010cceba6700e4cc16b3be98598d2295f'
+            '374c7fbca1d225fdb7eafd646937c202cb0427acd1558f2d8411ab0c394d6287')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -92,7 +94,8 @@ prepare() {
   apply_patch_with_msg \
     002-no-exact-version-for-fast_float.patch \
     003-CellAttribute-Fix-mingw-build.patch \
-    004-fix-build-with-fmt-11.patch
+    004-fix-build-with-fmt-11.patch \
+    005-avoid-file-conflict-with-vtk.patch
 }
 
 build() {
