qgis: update to 3.40.0

--- a/mingw-w64-qgis/PKGBUILD
+++ b/mingw-w64-qgis/PKGBUILD
@@ -3,11 +3,11 @@
 _realname=qgis
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=3.38.3
+pkgver=3.40.0
 pkgrel=1
 pkgdesc='Geographic Information System (GIS) that supports vector, raster & database formats (mingw-w64)'
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('ucrt64' 'clang64' 'clangarm64')
 url='https://qgis.org/'
 msys2_repository_url="https://github.com/qgis/QGIS"
 msys2_references=(
@@ -15,14 +15,14 @@ msys2_references=(
 )
 license=('spdx:GPL-2.0-or-later')
 depends=("${MINGW_PACKAGE_PREFIX}-draco"
+         "${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-gdal"
+         "${MINGW_PACKAGE_PREFIX}-geos"
          "${MINGW_PACKAGE_PREFIX}-gsl"
          "${MINGW_PACKAGE_PREFIX}-exiv2"
-         "${MINGW_PACKAGE_PREFIX}-hdf5"
          "${MINGW_PACKAGE_PREFIX}-libspatialite"
          "${MINGW_PACKAGE_PREFIX}-libxml2"
          "${MINGW_PACKAGE_PREFIX}-libzip"
-         "${MINGW_PACKAGE_PREFIX}-netcdf"
          "${MINGW_PACKAGE_PREFIX}-opencl-icd"
          "${MINGW_PACKAGE_PREFIX}-pdal"
          "${MINGW_PACKAGE_PREFIX}-proj"
@@ -35,7 +35,7 @@ depends=("${MINGW_PACKAGE_PREFIX}-draco"
          "${MINGW_PACKAGE_PREFIX}-qt5-3d"
          "${MINGW_PACKAGE_PREFIX}-qt5-base"
          "${MINGW_PACKAGE_PREFIX}-qt5-declarative"
-         "${MINGW_PACKAGE_PREFIX}-qt5-gamepad"
+         #"${MINGW_PACKAGE_PREFIX}-qt5-gamepad"
          "${MINGW_PACKAGE_PREFIX}-qt5-location"
          "${MINGW_PACKAGE_PREFIX}-qt5-multimedia"
          "${MINGW_PACKAGE_PREFIX}-qt5-serialport"
@@ -44,25 +44,35 @@ depends=("${MINGW_PACKAGE_PREFIX}-draco"
          $([[ ${CARCH} == aarch64 ]] || echo "${MINGW_PACKAGE_PREFIX}-qtwebkit")
          "${MINGW_PACKAGE_PREFIX}-qscintilla-qt5"
          "${MINGW_PACKAGE_PREFIX}-qwt-qt5"
-         "${MINGW_PACKAGE_PREFIX}-spatialindex")
+         "${MINGW_PACKAGE_PREFIX}-sqlite3"
+         "${MINGW_PACKAGE_PREFIX}-spatialindex"
+         "${MINGW_PACKAGE_PREFIX}-zlib"
+         "${MINGW_PACKAGE_PREFIX}-zstd")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
              "${MINGW_PACKAGE_PREFIX}-ninja"
+             "${MINGW_PACKAGE_PREFIX}-nlohmann-json"
              "${MINGW_PACKAGE_PREFIX}-opencl-clhpp"
              "${MINGW_PACKAGE_PREFIX}-sip"
              "${MINGW_PACKAGE_PREFIX}-pyqt-builder"
              "${MINGW_PACKAGE_PREFIX}-python"
-             "${MINGW_PACKAGE_PREFIX}-qt5-tools")
+             "${MINGW_PACKAGE_PREFIX}-qt5-tools"
+             "${MINGW_PACKAGE_PREFIX}-netcdf"
+             "${MINGW_PACKAGE_PREFIX}-postgresql")
+optdepends=("${MINGW_PACKAGE_PREFIX}-netcdf: mdal plugin"
+            "${MINGW_PACKAGE_PREFIX}-postgresql: postgres plugins")
 source=("https://qgis.org/downloads/${_realname}-$pkgver.tar.bz2"
         "001-fix-building-with-mingw-w64-clang.patch"
         "002-fix-settingstree-init-order-clang.patch"
-        "003-fix-pyrcc-command.patch"
-        "004-fix-customwidgets-install.patch")
-sha256sums=('d72d07a39729d97d8d3f536301819a4ca9c2c00f9f396e9022a5ec4356d828bf'
+        "003-fix-build-qgis-qt6-on-mingw.patch"
+        "004-fix-customwidgets-install.patch"
+        "005-fix-build-untwine-on-mingw.patch")
+sha256sums=('14a6c224ad6519b807f4c2cbdd3697c40fd1e114d439eef8b3ed11e7dc5260c3'
             '9acb0f5fe3e486580debe9434c4afd98e0d8b862e0c86837d9aaf12472a7d119'
             '47e6471b92b85d97e58b617da326c15622c01786c19eb7d4d5814483becb75e4'
-            'c0f599996d90da55d1370f7144d545352d0075ca7876d4ade52c520b237ce318'
-            '216dc67ef707f2e918afb7d190c9ea75c11065dea0d23d11b94cab5d8463bac3')
+            '3b4bed92e3a746a43b124746c1fe000cd62c2e5e25a2359aa96965f17a6ab387'
+            '216dc67ef707f2e918afb7d190c9ea75c11065dea0d23d11b94cab5d8463bac3'
+            'd7e2a4883ef14140ea82ba519171d07ca62799f3a797230816ab37298bc0174b')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -81,8 +91,12 @@ prepare() {
       002-fix-settingstree-init-order-clang.patch
   fi
   apply_patch_with_msg \
-    003-fix-pyrcc-command.patch \
+    003-fix-build-qgis-qt6-on-mingw.patch \
     004-fix-customwidgets-install.patch
+
+  mv external/untwine/untwine/mingw/mapfile.{h,hpp}
+  apply_patch_with_msg \
+    005-fix-build-untwine-on-mingw.patch
 }
 
 build() {
@@ -95,11 +109,13 @@ build() {
     _extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
   fi
 
-  if [[ ${CARCH} == aarch64 ]]; then
-    _extra_config+=("-DWITH_QTWEBKIT=OFF")
+  if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
+    CXXFLAGS+=" -Wno-ignored-attributes"
+  else
+    CXXFLAGS+=" -Wno-attributes"
   fi
+  CXXFLAGS+=" -Wno-deprecated-declarations"
 
-  CXXFLAGS+=" -Wno-ignored-attributes"
   MSYS2_ARG_CONV_EXCL="-DCMAKE_INSTALL_PREFIX=" \
   ${MINGW_PREFIX}/bin/cmake \
     -G"Ninja" \
@@ -112,10 +128,17 @@ build() {
     -DQGIS_LIBEXEC_SUBDIR=bin \
     -DQGIS_PLUGIN_SUBDIR=lib/qgis/plugins \
     -DQT_PLUGINS_DIR=share/qt5/plugins \
+    -DPREFER_INTERNAL_LIBS=OFF \
+    -DWITH_INTERNAL_POLY2TRI=ON \
+    -DWITH_INTERNAL_MESHOPTIMIZER=ON \
+    -DWITH_INTERNAL_NLOHMANN_JSON=OFF \
     -DWITH_3D=ON \
     -DWITH_BINDINGS=ON \
     -DWITH_CUSTOM_WIDGETS=ON \
+    -DWITH_EPT=ON \
     -DWITH_PDAL=ON \
+    -DWITH_POSTGRESQL=ON \
+    -DWITH_QUICK=ON \
     -DWITH_QWTPOLAR=ON \
     -DENABLE_TESTS=OFF \
     -DWITH_GRASS=OFF \
