qgis: Build with Qt6

--- a/mingw-w64-qgis/PKGBUILD
+++ b/mingw-w64-qgis/PKGBUILD
@@ -4,7 +4,7 @@ _realname=qgis
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=3.40.0
-pkgrel=2
+pkgrel=3
 pkgdesc='Geographic Information System (GIS) that supports vector, raster & database formats (mingw-w64)'
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
@@ -29,21 +29,19 @@ depends=("${MINGW_PACKAGE_PREFIX}-draco"
          "${MINGW_PACKAGE_PREFIX}-protobuf"
          "${MINGW_PACKAGE_PREFIX}-python-gdal"
          "${MINGW_PACKAGE_PREFIX}-python-owslib"
-         "${MINGW_PACKAGE_PREFIX}-python-pyqt5"
-         "${MINGW_PACKAGE_PREFIX}-python-qscintilla-qt5"
-         "${MINGW_PACKAGE_PREFIX}-qca-qt5"
-         "${MINGW_PACKAGE_PREFIX}-qt5-3d"
-         "${MINGW_PACKAGE_PREFIX}-qt5-base"
-         "${MINGW_PACKAGE_PREFIX}-qt5-declarative"
-         #"${MINGW_PACKAGE_PREFIX}-qt5-gamepad"
-         "${MINGW_PACKAGE_PREFIX}-qt5-location"
-         "${MINGW_PACKAGE_PREFIX}-qt5-multimedia"
-         "${MINGW_PACKAGE_PREFIX}-qt5-serialport"
-         "${MINGW_PACKAGE_PREFIX}-qt5-svg"
-         "${MINGW_PACKAGE_PREFIX}-qtkeychain-qt5"
-         $([[ ${CARCH} == aarch64 ]] || echo "${MINGW_PACKAGE_PREFIX}-qtwebkit")
-         "${MINGW_PACKAGE_PREFIX}-qscintilla-qt5"
-         "${MINGW_PACKAGE_PREFIX}-qwt-qt5"
+         "${MINGW_PACKAGE_PREFIX}-python-pyqt6"
+         "${MINGW_PACKAGE_PREFIX}-python-qscintilla-qt6"
+         "${MINGW_PACKAGE_PREFIX}-qca-qt6"
+         "${MINGW_PACKAGE_PREFIX}-qt6-3d"
+         "${MINGW_PACKAGE_PREFIX}-qt6-base"
+         "${MINGW_PACKAGE_PREFIX}-qt6-declarative"
+         "${MINGW_PACKAGE_PREFIX}-qt6-location"
+         "${MINGW_PACKAGE_PREFIX}-qt6-multimedia"
+         "${MINGW_PACKAGE_PREFIX}-qt6-serialport"
+         "${MINGW_PACKAGE_PREFIX}-qt6-svg"
+         "${MINGW_PACKAGE_PREFIX}-qtkeychain-qt6"
+         "${MINGW_PACKAGE_PREFIX}-qscintilla-qt6"
+         "${MINGW_PACKAGE_PREFIX}-qwt-qt6"
          "${MINGW_PACKAGE_PREFIX}-sqlite3"
          "${MINGW_PACKAGE_PREFIX}-spatialindex"
          "${MINGW_PACKAGE_PREFIX}-zlib"
@@ -56,11 +54,11 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-sip"
              "${MINGW_PACKAGE_PREFIX}-pyqt-builder"
              "${MINGW_PACKAGE_PREFIX}-python"
-             "${MINGW_PACKAGE_PREFIX}-qt5-tools"
+             "${MINGW_PACKAGE_PREFIX}-qt6-tools"
              "${MINGW_PACKAGE_PREFIX}-netcdf"
              "${MINGW_PACKAGE_PREFIX}-postgresql")
-optdepends=("${MINGW_PACKAGE_PREFIX}-netcdf: mdal plugin"
-            "${MINGW_PACKAGE_PREFIX}-postgresql: postgres plugins")
+#optdepends=("${MINGW_PACKAGE_PREFIX}-netcdf: mdal plugin"
+#            "${MINGW_PACKAGE_PREFIX}-postgresql: postgres plugins")
 source=("https://qgis.org/downloads/${_realname}-$pkgver.tar.bz2"
         "001-fix-building-with-mingw-w64-clang.patch"
         "002-fix-settingstree-init-order-clang.patch"
@@ -70,7 +68,7 @@ source=("https://qgis.org/downloads/${_realname}-$pkgver.tar.bz2"
 sha256sums=('14a6c224ad6519b807f4c2cbdd3697c40fd1e114d439eef8b3ed11e7dc5260c3'
             '9acb0f5fe3e486580debe9434c4afd98e0d8b862e0c86837d9aaf12472a7d119'
             '47e6471b92b85d97e58b617da326c15622c01786c19eb7d4d5814483becb75e4'
-            '3b4bed92e3a746a43b124746c1fe000cd62c2e5e25a2359aa96965f17a6ab387'
+            '78b67f0b50823e64333cd781c0d05bc748d352ffd29fe497b5b5f34b14896ea4'
             '216dc67ef707f2e918afb7d190c9ea75c11065dea0d23d11b94cab5d8463bac3'
             'd7e2a4883ef14140ea82ba519171d07ca62799f3a797230816ab37298bc0174b')
 
@@ -109,10 +107,6 @@ build() {
     _extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
   fi
 
-  if [[ ${CARCH} == aarch64 ]]; then
-    _extra_config+=("-DWITH_QTWEBKIT=OFF")
-  fi
-
   if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
     CXXFLAGS+=" -Wno-ignored-attributes"
   else
@@ -131,17 +125,19 @@ build() {
     -DQGIS_DATA_SUBDIR=share \
     -DQGIS_LIBEXEC_SUBDIR=bin \
     -DQGIS_PLUGIN_SUBDIR=lib/qgis/plugins \
-    -DQT_PLUGINS_DIR=share/qt5/plugins \
+    -DQT_PLUGINS_DIR=share/qt6/plugins \
     -DPREFER_INTERNAL_LIBS=OFF \
     -DWITH_INTERNAL_POLY2TRI=ON \
     -DWITH_INTERNAL_MESHOPTIMIZER=ON \
     -DWITH_INTERNAL_NLOHMANN_JSON=OFF \
+    -DBUILD_WITH_QT6=ON \
     -DWITH_3D=ON \
     -DWITH_BINDINGS=ON \
     -DWITH_CUSTOM_WIDGETS=ON \
     -DWITH_EPT=ON \
     -DWITH_PDAL=ON \
     -DWITH_POSTGRESQL=ON \
+    -DWITH_QTWEBKIT=OFF \
     -DWITH_QUICK=ON \
     -DWITH_QWTPOLAR=ON \
     -DENABLE_TESTS=OFF \
