--- a/mingw-w64-zed/PKGBUILD
+++ b/mingw-w64-zed/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=zed
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=0.158.2
+pkgver=0.159.6
 pkgrel=1
 pkgdesc="A high-performance, multiplayer code editor (mingw-w64)"
 arch=('any')
@@ -36,13 +36,19 @@ optdepends=("${MINGW_PACKAGE_PREFIX}-ollama: provides LLMs for assistance panel"
             "${MINGW_PACKAGE_PREFIX}-rust-analyzer: for a better Rust language support")
 source=("git+${msys2_repository_url}.git#tag=v${pkgver}"
         "zstd-sys.tar.gz::https://crates.io/api/v1/crates/zstd-sys/2.0.13+zstd.1.5.6/download"
+        # download it manually because Windows complains of very long path for certain files when
+        # downloaded by cargo
+        "git+https://github.com/microsoft/python-environment-tools.git#commit=ffcbf3f28c46633abd5448a52b1f396c322e0d6c"
         "zed-download-pc-windows-gnu-assets.patch"
         "zed-dont-vendor-cargo-about.patch"
+        "zed-use-vendored-pet.patch"
         "zstd-sys-remove-statik.patch")
-sha256sums=('41bbca160769de99861e65e05f223c831d0b3656f0765d3007504903167d98da'
+sha256sums=('edc7ffa7e71a7a99e8a611f68e05776634d4fb80c6f303b5454f4a7e0c0d0fee'
             '38ff0f21cfee8f97d94cef41359e0c89aa6113028ab0291aa8ca0038995a95aa'
+            'c01a0af9ade104cd706ebe6b7f2c001f7f2a6a1f3379f6724589891e90819fbd'
             '5cbf1cb9c1e3436f8db242b74da519d12542dd94f720be4a8c1ece7cb54c849d'
             'b126b7a9e3cc8d3d68c49dbfc184d54691b10172dbfd3272d4c2f43424cfca5b'
+            'd0321cdfac37c0586a777d17a79dee9cfa82d518d7ab0ad44e3b9ae59abb6671'
             '48f4900ceb02d3aaf9a1020f33d56629156e96759f456c0e7ca18bfcf910767b')
 
 prepare() {
@@ -56,6 +62,8 @@ prepare() {
   patch -Np1 -i "../zed-dont-vendor-cargo-about.patch"
   # link system deps dynamically
   patch -d "../zstd-sys-2.0.13+zstd.1.5.6" -i "../zstd-sys-remove-statik.patch"
+  # use vendored `pet*` crates so cargo won't even download it
+  patch -Np1 -i "../zed-use-vendored-pet.patch"
   # use patched *-sys crates
   cat >> Cargo.toml <<END
 
