qgis: disable qtwebkit on clangarm64
Enabled by mistake.

--- a/mingw-w64-qgis/PKGBUILD
+++ b/mingw-w64-qgis/PKGBUILD
@@ -4,7 +4,7 @@ _realname=qgis
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
 pkgver=3.40.0
-pkgrel=1
+pkgrel=2
 pkgdesc='Geographic Information System (GIS) that supports vector, raster & database formats (mingw-w64)'
 arch=('any')
 mingw_arch=('ucrt64' 'clang64' 'clangarm64')
@@ -107,6 +107,10 @@ build() {
     _extra_config+=("-DCMAKE_BUILD_TYPE=Release")
   else
     _extra_config+=("-DCMAKE_BUILD_TYPE=Debug")
+  fi
+
+  if [[ ${CARCH} == aarch64 ]]; then
+    _extra_config+=("-DWITH_QTWEBKIT=OFF")
   fi
 
   if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
