mcfgthread: Upgrade to 1.9.1
Co-authored-by: Maksim Bondarenkov <119937608+ognevny@users.noreply.github.com>
Signed-off-by: LIU Hao <lh_mouse@126.com>

--- a/mingw-w64-mcfgthread/PKGBUILD
+++ b/mingw-w64-mcfgthread/PKGBUILD
@@ -4,14 +4,14 @@ _realname=mcfgthread
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}"-libs)
-pkgver=1.8.4
+pkgver=1.9.1
 pkgrel=1
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64' 'clang32')
+mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/lhmouse/mcfgthread"
 license=('spdx:LGPL-3.0-or-later' 'custom')
 options=('staticlibs' 'strip' '!buildflags')
-_commit='051b8dee25b4ec38cb145eb92815c03cd61f2c9f'
+_tag='v1.9-ga.1'
 makedepends=(
   "${MINGW_PACKAGE_PREFIX}-cc"
   "${MINGW_PACKAGE_PREFIX}-meson"
@@ -19,15 +19,15 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-headers"
   "git"
 )
-source=("git+https://github.com/lhmouse/mcfgthread.git#commit=${_commit}")
+source=("git+https://github.com/lhmouse/mcfgthread.git#tag=${_tag}")
 sha256sums=('SKIP')
 
 build() {
   [[ -d "${srcdir}/build-${MSYSTEM}" ]] && rm -rf "${srcdir}/build-${MSYSTEM}"
   mkdir -p "${srcdir}/build-${MSYSTEM}" && cd "${srcdir}/build-${MSYSTEM}"
 
-  export CFLAGS+=' -Os -g'
   MSYS2_ARG_CONV_EXCL="--prefix=" meson setup -Dbuildtype=plain  \
+    -Dc_args='-Os -g' -Dc_link_args='-Os'  \
     --prefix="${MINGW_PREFIX}" . ../${_realname}
 
   # Build the DLL first, as Meson creates the DLL in the working directory,
