gtk4: Update to 4.16.4

--- a/mingw-w64-gtk4/PKGBUILD
+++ b/mingw-w64-gtk4/PKGBUILD
@@ -4,8 +4,8 @@ _realname=gtk4
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-media-gstreamer")
-pkgver=4.16.3
-pkgrel=2
+pkgver=4.16.4
+pkgrel=1
 pkgdesc="GObject-based multi-platform GUI toolkit (v4) (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -40,12 +40,12 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-shared-mime-info")
 source=("https://download.gnome.org/sources/gtk/${pkgver:0:4}/gtk-${pkgver}.tar.xz"
         "https://gitlab.gnome.org/GNOME/gtk/-/commit/b569470b87d143d30c2388046c9a6450696f19b8.patch"
-        "https://gitlab.gnome.org/GNOME/gtk/-/commit/f840ae133711332a04831554e2de4739f2965835.patch"
-        "001-fix-font-rendering.patch")
-sha256sums=('2ec53e07d18c9f003b39e4a6a838054d9259e048b6c4c05d80c0d05aa721d944'
+        "001-fix-font-rendering.patch"
+        "002-remove-debug-print.patch")
+sha256sums=('36b96c158babd29085181b857577a81f5a0a6a3b182811b171cd688a709b0b41'
             '50e6ac71f2081f80d334a5be5c8c49b9c1c3fab001c1f4ca0f2556d7f2ec92ed'
-            '2994b8cb3fe5217f694fce30c1e3600922b58e3754497c8683fde506f632b054'
-            'a2c6e3350bd9c1744da6b7714b25cbd419645b731435f7d295a9f99da3c1479f')
+            'a2c6e3350bd9c1744da6b7714b25cbd419645b731435f7d295a9f99da3c1479f'
+            'f5288a5e94847502bbe7f14bbb68970898a224a7a500abc5fc0d3ef240a6a34d')
 
 prepare() {
   cd gtk-${pkgver}
@@ -53,12 +53,12 @@ prepare() {
   # https://github.com/msys2/MINGW-packages/pull/20311#issuecomment-2014971531
   patch -R -Np1 -i ../b569470b87d143d30c2388046c9a6450696f19b8.patch
 
-  # https://gitlab.gnome.org/GNOME/gtk/-/merge_requests/7776
-  patch -Np1 -i ../f840ae133711332a04831554e2de4739f2965835.patch
-
   # Needed since https://gitlab.gnome.org/GNOME/gtk/-/commit/5f7cab4632c93acb3c7c818b5c69e92d657fe8de
   # otherwise the revert above is ignored too
   patch -Np1 -i ../001-fix-font-rendering.patch
+
+  # https://gitlab.gnome.org/GNOME/gtk/-/issues/7130
+  patch -Np1 -i ../002-remove-debug-print.patch
 }
 
 build() {
