libheif: Update to 1.19.1
PR included in the new release

--- a/mingw-w64-libheif/PKGBUILD
+++ b/mingw-w64-libheif/PKGBUILD
@@ -3,8 +3,8 @@
 _realname=libheif
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
-pkgver=1.18.2
-pkgrel=3
+pkgver=1.19.1
+pkgrel=1
 pkgdesc="HEIF image decoder/encoder library and tools (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -35,15 +35,11 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
             echo "${MINGW_PACKAGE_PREFIX}-svt-av1" )
          "${MINGW_PACKAGE_PREFIX}-x265"
          "${MINGW_PACKAGE_PREFIX}-zlib")
-source=("https://github.com/strukturag/libheif/releases/download/v${pkgver}/${_realname}-${pkgver}.tar.gz"
-        "https://patch-diff.githubusercontent.com/raw/strukturag/libheif/pull/1263.patch")
-sha256sums=('c4002a622bec9f519f29d84bfdc6024e33fd67953a5fb4dc2c2f11f67d5e45bf'
-            '58d309d8da8793d4e5df18df566d7ab5b681fd858d10abdc8dd29b616d1987eb')
+source=("https://github.com/strukturag/libheif/releases/download/v${pkgver}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('994913eb2a29c00c146d6f3d61e07d9ff0d8e9eccb0624d87e4be8b108c74e4b')
 
 prepare() {
   cd "${_realname}-${pkgver}"
-
-  patch -Np1 -i "${srcdir}/1263.patch"
 }
 
 build() {
