petsc: update to 3.22.1 & new test suite

--- a/mingw-w64-petsc/PKGBUILD
+++ b/mingw-w64-petsc/PKGBUILD
@@ -32,8 +32,8 @@
 _realname=petsc
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}" "${MINGW_PACKAGE_PREFIX}-${_realname}-build")
-pkgver=3.22.0
-pkgrel=2
+pkgver=3.22.1
+pkgrel=1
 pkgdesc='Sparse iterative (non)linear solver package (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -56,21 +56,21 @@ makedepends=('python'
              $([[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]] || echo "${MINGW_PACKAGE_PREFIX}-fc"))
 optdepends=("${MINGW_PACKAGE_PREFIX}-tcl: build & run test suite")
 source=("https://web.cels.anl.gov/projects/petsc/download/release-snapshots/${_realname}-lite-${pkgver}.tar.gz"
-        'all.tcl'
-        'tclbuildtest.tcl'
-        'petsc.test'
-        'petsc-mat.test'
+        'petsc.tcl'
+        'testme-0.tm'
+        'buildme-0.tm'
+        'xyz-0.tm'
         '0001-mpi-detection-override.patch'
         '0002-openblas-clang.patch'
         '0003-pid.patch'
         '0004-set_output_format.patch'
         '0005-with-pthread.patch')
 noextract=("${_realname}-lite-${pkgver}.tar.gz")
-sha256sums=('2c03f7c0f7ad2649240d4989355cf7fb7f211b75156cd7d424e1d9dd7dfb290b'
-            'ec5072630e1c0309fe383669e9187790cd135a393c67bc4bc35cf60b0ba396ff'
-            '15c7af25b91406d5fe5f26cfe00963b6cfde1c3dd466eb25f1b6fae299934966'
-            '7d171b2680211b0a4d305dfb866faf5c995e47d0ecf619d33f1cce3190c32128'
-            'b1c9c4c4155d10bcf12c5c512df34cd6a781c4c81f6edbc8e331f49c7e10a1f7'
+sha256sums=('7117d3ae6827f681ed9737939d4e86896b4751e27cca941bb07e5703f19a0a7b'
+            '5df892855b26560a2ccd1a258b70ac63a772dbde5ecc4a40a95e48c1f52b94ab'
+            '8d8f5670ffdf34a10b0d027bff976131824e2e6b053f8a13d207ecddd4663d6d'
+            'd0db2aa573c9aaf57b30cb3c2bd7c66e1677f3f468002f467da98b75943076b1'
+            '285520fc2e38db814914e6a45a1417508cf9e819a27ac64185fe4bcc57c419ad'
             'bef5353d6d10de492c9832f24b41993c38d1b36a78eb55e7d49089ba72acc05a'
             'c954cc4240a6f3cebdc40cf4fca07561e58eb50717b9741c296b73657bac1c51'
             '08d37a205d7a2ae27ccef41ee931f92c96aa428b94ed633def2f56fdfa6fb11e'
@@ -226,7 +226,7 @@ _package() {
   )
   (
     cd ${srcdir}
-    cp {all,tclbuildtest}.tcl {petsc,petsc-mat}.test ${pkgdir}${MINGW_PREFIX}/share/test/${_realname}
+    cp *.tcl *.tm ${pkgdir}${MINGW_PREFIX}/share/test/${_realname}
   )
   (
     cd src/ksp/ksp/tutorials
