--- a/mingw-w64-python-pip/PKGBUILD
+++ b/mingw-w64-python-pip/PKGBUILD
@@ -8,7 +8,7 @@ provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 pkgver=24.1.2
-pkgrel=2
+pkgrel=3
 pkgdesc="The PyPA recommended tool for installing Python packages. (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -29,14 +29,21 @@ options=('!strip')
 source=(
   "https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz"
   "0001-use-system-distlib.patch"
+  "0002-only-warn-for-externally-managed.patch"
 )
 sha256sums=('e5458a0b89f2755e0ee8c0c77613fe5273e05f337907874d64f13171a898a7ff'
-            'c7f98690afa60e59324f1ce52e72bd7809cbfaba4e29a2d933f08c1a025f8246')
+            'c7f98690afa60e59324f1ce52e72bd7809cbfaba4e29a2d933f08c1a025f8246'
+            'be196f12feee11fe1caccbdeff9a31ac077120de7b6e85679ea54b6dd2df8f5b')
 
 prepare() {
   cd "${_realname}-${pkgver}"
   rm -r src/pip/_vendor/distlib
   patch -p1 -i ${srcdir}/0001-use-system-distlib.patch
+
+  # To avoid breaking too many systems while still warning the users that it's not recommended
+  # to use pip outside of a venv, downgrade the error to a warning, for now.
+  # https://github.com/msys2/MINGW-packages/pull/22368#issuecomment-2452503886
+  patch -p1 -i ${srcdir}/0002-only-warn-for-externally-managed.patch
 }
 
 build() {
