gtk4: Update to 4.16.5
002-remove-debug-print.patch: fixed upstream

--- a/mingw-w64-gtk4/PKGBUILD
+++ b/mingw-w64-gtk4/PKGBUILD
@@ -4,7 +4,7 @@ _realname=gtk4
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}-media-gstreamer")
-pkgver=4.16.4
+pkgver=4.16.5
 pkgrel=1
 pkgdesc="GObject-based multi-platform GUI toolkit (v4) (mingw-w64)"
 arch=('any')
@@ -40,12 +40,10 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
          "${MINGW_PACKAGE_PREFIX}-shared-mime-info")
 source=("https://download.gnome.org/sources/gtk/${pkgver:0:4}/gtk-${pkgver}.tar.xz"
         "https://gitlab.gnome.org/GNOME/gtk/-/commit/b569470b87d143d30c2388046c9a6450696f19b8.patch"
-        "001-fix-font-rendering.patch"
-        "002-remove-debug-print.patch")
-sha256sums=('36b96c158babd29085181b857577a81f5a0a6a3b182811b171cd688a709b0b41'
+        "001-fix-font-rendering.patch")
+sha256sums=('302d6813fbed95c419fb3ab67c5da5e214882b6a645c3eab9028dfb91ab418a4'
             '50e6ac71f2081f80d334a5be5c8c49b9c1c3fab001c1f4ca0f2556d7f2ec92ed'
-            'a2c6e3350bd9c1744da6b7714b25cbd419645b731435f7d295a9f99da3c1479f'
-            'f5288a5e94847502bbe7f14bbb68970898a224a7a500abc5fc0d3ef240a6a34d')
+            'a2c6e3350bd9c1744da6b7714b25cbd419645b731435f7d295a9f99da3c1479f')
 
 prepare() {
   cd gtk-${pkgver}
@@ -56,9 +54,6 @@ prepare() {
   # Needed since https://gitlab.gnome.org/GNOME/gtk/-/commit/5f7cab4632c93acb3c7c818b5c69e92d657fe8de
   # otherwise the revert above is ignored too
   patch -Np1 -i ../001-fix-font-rendering.patch
-
-  # https://gitlab.gnome.org/GNOME/gtk/-/issues/7130
-  patch -Np1 -i ../002-remove-debug-print.patch
 }
 
 build() {
