mcfgthread: apply small fixes

--- a/mingw-w64-mcfgthread/PKGBUILD
+++ b/mingw-w64-mcfgthread/PKGBUILD
@@ -5,13 +5,13 @@ pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-${_realname}"-libs)
 pkgver=1.9.1
-pkgrel=1
+pkgrel=2
+pkgdesc="An efficient gthread implementation, providing C++11 threading support (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://github.com/lhmouse/mcfgthread"
-license=('spdx:LGPL-3.0-or-later' 'custom')
-options=('staticlibs' 'strip' '!buildflags')
-_tag='v1.9-ga.1'
+license=('spdx:LGPL-3.0-or-later WITH GCC-exception-3.1')
+options=('!buildflags')
 makedepends=(
   "${MINGW_PACKAGE_PREFIX}-cc"
   "${MINGW_PACKAGE_PREFIX}-meson"
@@ -19,8 +19,8 @@ makedepends=(
   "${MINGW_PACKAGE_PREFIX}-headers"
   "git"
 )
-source=("git+https://github.com/lhmouse/mcfgthread.git#tag=${_tag}")
-sha256sums=('SKIP')
+source=("git+https://github.com/lhmouse/mcfgthread.git#tag=v${pkgver%.*}-ga.${pkgver##*.}")
+sha256sums=('1e42831d4c0da24928cdddd695d5b42c4f2699952fd248867328ca6e81d73a2b')
 
 build() {
   [[ -d "${srcdir}/build-${MSYSTEM}" ]] && rm -rf "${srcdir}/build-${MSYSTEM}"
@@ -45,8 +45,8 @@ check() {
 }
 
 package_mcfgthread() {
-  pkgdesc="An efficient gthread implementation, providing C++11 threading support (devel)"
-  depends=("${MINGW_PACKAGE_PREFIX}-${_realname}"-libs)
+  pkgdesc+=" (devel)"
+  depends=("${MINGW_PACKAGE_PREFIX}-${_realname}"-libs=${pkgver)
 
   mkdir -p "${pkgdir}${MINGW_PREFIX}"
   cd "${srcdir}${MINGW_PREFIX}"
@@ -55,7 +55,7 @@ package_mcfgthread() {
 }
 
 package_mcfgthread-libs() {
-  pkgdesc="An efficient gthread implementation, providing C++11 threading support (libs)"
+  pkgdesc+=" (libs)"
 
   mkdir -p "${pkgdir}${MINGW_PREFIX}"
   cd "${srcdir}${MINGW_PREFIX}"
