Update box2d to 3.0.0

--- a/mingw-w64-box2d-3.0/PKGBUILD
+++ b/mingw-w64-box2d-3.0/PKGBUILD
@@ -1,9 +1,9 @@
 # Maintainer: Felix Xing (Felixaszx) felixxing3009@outlook.com
 
 _realname=box2d
-pkgbase=mingw-w64-${_realname}-3.0
-pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}-3.0"
-conflicts=("${MINGW_PACKAGE_PREFIX}-${_realname}")
+pkgbase=mingw-w64-${_realname}
+pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
+conflicts=()
 pkgver=3.0.0
 pkgrel=1
 pkgdesc="2D rigid body simulation library for games (mingw-w64)"
@@ -61,7 +61,7 @@ package() {
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake.exe --install .
 
   mkdir ${pkgdir}/${MINGW_PREFIX}/include
-  cp -R "${srcdir}/${_realname}-${pkgver}/include/${_realname}" "${pkgdir}/${MINGW_PREFIX}/include/box2d-3.0"
+  cp -R "${srcdir}/${_realname}-${pkgver}/include/${_realname}" "${pkgdir}/${MINGW_PREFIX}/include/box2d"
 
   install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 }
