--- a/mingw-w64-box2d/PKGBUILD
+++ b/mingw-w64-box2d/PKGBUILD
@@ -1,22 +1,22 @@
-# Maintainer: Martell Malone <martell malone at g mail dot com>
+# Maintainer: Felix Xing (Felixaszx) felixxing3009@outlook.com
 
 _realname=box2d
 pkgbase=mingw-w64-${_realname}
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=2.4.2
+conflicts=()
+pkgver=3.0.0
 pkgrel=1
 pkgdesc="2D rigid body simulation library for games (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
+mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
 url="https://www.box2d.org/"
 license=('MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cmake"
-             "${MINGW_PACKAGE_PREFIX}-ninja"
-             "${MINGW_PACKAGE_PREFIX}-doxygen")
+             "${MINGW_PACKAGE_PREFIX}-ninja")
 source=(${_realname}-${pkgver}.tar.gz::https://github.com/erincatto/Box2D/archive/v${pkgver}.tar.gz)
-sha256sums=('85b9b104d256c985e6e244b4227d447897fac429071cc114e5cc819dae848852')
+sha256sums=('64ad759006cd2377c99367f51fb36942b57f0e9ad690ed41548dd620e6f6c8b1')
 options=(staticlibs !buildflags !strip)
 
 build() {
@@ -29,9 +29,9 @@ build() {
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
     -DBUILD_SHARED_LIBS=ON \
-    -DBOX2D_BUILD_DOCS=ON \
-    -DBOX2D_BUILD_TESTBED=OFF \
-    -DBOX2D_BUILD_UNIT_TESTS=OFF \
+    -DBOX2D_DOCS=OFF \
+    -DBOX2D_SAMPLES=OFF \
+    -DBOX2D_UNIT_TESTS=OFF \
     ../${_realname}-${pkgver}/
 
   ${MINGW_PREFIX}/bin/cmake.exe --build .
@@ -45,9 +45,9 @@ build() {
     -DCMAKE_BUILD_TYPE=Release \
     -DCMAKE_INSTALL_PREFIX=${MINGW_PREFIX} \
     -DBUILD_SHARED_LIBS=OFF \
-    -DBOX2D_BUILD_DOCS=OFF \
-    -DBOX2D_BUILD_TESTBED=OFF \
-    -DBOX2D_BUILD_UNIT_TESTS=OFF \
+    -DBOX2D_DOCS=OFF \
+    -DBOX2D_SAMPLES=OFF \
+    -DBOX2D_UNIT_TESTS=OFF \
     ../${_realname}-${pkgver}/
 
   ${MINGW_PREFIX}/bin/cmake.exe --build .
@@ -59,6 +59,9 @@ package() {
 
   cd "${srcdir}/build-${MSYSTEM}"
   DESTDIR="${pkgdir}" ${MINGW_PREFIX}/bin/cmake.exe --install .
+
+  mkdir ${pkgdir}/${MINGW_PREFIX}/include
+  cp -R "${srcdir}/${_realname}-${pkgver}/include/${_realname}" "${pkgdir}/${MINGW_PREFIX}/include/box2d"
 
   install -Dm644 "${srcdir}/${_realname}-${pkgver}/LICENSE" "${pkgdir}${MINGW_PREFIX}/share/licenses/${_realname}/LICENSE"
 }
