fix llvm compile error

--- a/mingw-w64-godot/PKGBUILD
+++ b/mingw-w64-godot/PKGBUILD
@@ -26,6 +26,8 @@ sha256sums=('751e55bfad8e04b846f9cf7b6eb80e058986a2cb1b103fc0fe6a4d8526a20e56')
 
 prepare() {
   cd ${_realname}-${pkgver}-stable
+
+  patch -p1 -i "../../001-fix-llvm-duplicate-symbol.patch"
 }
 
 build() {
@@ -48,7 +50,11 @@ build() {
 
 package() {
   cd ${_realname}-${pkgver}-stable
-  install -Dm755 bin/godot.windows.editor.x86_64.exe "${pkgdir}${MINGW_PREFIX}/bin/godot.exe"
+  if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
+    install -Dm755 bin/godot.windows.editor.x86_64.llvm.exe "${pkgdir}${MINGW_PREFIX}/bin/godot.exe"
+  else
+    install -Dm755 bin/godot.windows.editor.x86_64.exe "${pkgdir}${MINGW_PREFIX}/bin/godot.exe"
+  fi
   install -Dm644 icon.svg "${pkgdir}${MINGW_PREFIX}/share/pixmaps/godot.svg"
   install -D -m644 LICENSE.txt "${pkgdir}${MINGW_PREFIX}/share/licenses/godot/LICENSE.txt"
   install -D -m644 "misc/dist/linux/godot.6" "${pkgdir}${MINGW_PREFIX}/share/man/man6/godot.6"
