mcfgthread: syntax fixes

--- a/mingw-w64-mcfgthread/PKGBUILD
+++ b/mingw-w64-mcfgthread/PKGBUILD
@@ -46,7 +46,7 @@ check() {
 
 package_mcfgthread() {
   pkgdesc+=" (devel)"
-  depends=("${MINGW_PACKAGE_PREFIX}-${_realname}"-libs=${pkgver)
+  depends=("${MINGW_PACKAGE_PREFIX}-${_realname}-libs=${pkgver}")
 
   mkdir -p "${pkgdir}${MINGW_PREFIX}"
   cd "${srcdir}${MINGW_PREFIX}"
