--- a/mingw-w64-python-flit-core/PKGBUILD
+++ b/mingw-w64-python-flit-core/PKGBUILD
@@ -3,20 +3,17 @@
 _realname=flit
 pkgbase=mingw-w64-python-${_realname}-core
 pkgname=(${MINGW_PACKAGE_PREFIX}-python-$_realname-core)
-pkgver=3.9.0
-pkgrel=2
+pkgver=3.10.1
+pkgrel=1
 pkgdesc='Simplified packaging of Python modules (core backend) (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
-url='https://github.com/takluyver/flit'
+msys2_repository_url='https://github.com/pypa/flit/'
+url='https://flit.pypa.io/'
 license=('spdx:BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
-source=("${_realname}-$pkgver.tar.gz"::"$url/archive/$pkgver.tar.gz")
-sha256sums=('55e28d0953726c4c744f02779b85f733f65da5bffb6a5d2fe11072d19ca2d148')
-
-prepare() {
-  cd "${_realname}-${pkgver}"
-}
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
+sha256sums=('9c6258ae76d218ce60f9e39a43ca42006a3abcc5c44ea6bb2a1daa13857a8f1a')
 
 build() {
   cd "${_realname}-${pkgver}/flit_core"
