python-pyphen: update to 0.17.0

--- a/mingw-w64-python-pyphen/PKGBUILD
+++ b/mingw-w64-python-pyphen/PKGBUILD
@@ -3,7 +3,7 @@
 _realname=pyphen
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.16.0
+pkgver=0.17.0
 pkgrel=1
 pkgdesc="Pure Python module to hyphenate text (mingw-w64)"
 arch=('any')
@@ -18,12 +18,11 @@ license=("spdx: GPL-2.0-or-later OR LGPL-2.1-or-later OR MPL-1.1")
 depends=("${MINGW_PACKAGE_PREFIX}-python")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
   "${MINGW_PACKAGE_PREFIX}-python-flit-core"
-  "${MINGW_PACKAGE_PREFIX}-python-installer"
-  "${MINGW_PACKAGE_PREFIX}-python-wheel")
+  "${MINGW_PACKAGE_PREFIX}-python-installer")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-pytest")
 options=('!strip')
 source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('2c006b3ddf072c9571ab97606d9ab3c26a92eaced4c0d59fd1d26988f308f413')
+sha256sums=('1d13acd1ce37a384d7612954ae6c7801bb4c5316da0e2b937b2127ba702a3da4')
 
 build() {
   cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
