python-pyproject-metadata: update to 0.9.0

--- a/mingw-w64-python-pyproject-metadata/PKGBUILD
+++ b/mingw-w64-python-pyproject-metadata/PKGBUILD
@@ -1,10 +1,9 @@
 # Contributor: Mehdi Chinoune <mehdi.chinoune @hotmail.com>
 
-_pyname=pyproject_metadata
 _realname=pyproject-metadata
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}")
-pkgver=0.8.0
+pkgver=0.9.0
 pkgrel=1
 pkgdesc="PEP 621 metadata parsing (mingw-w64)"
 arch=('any')
@@ -21,11 +20,11 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-flit-core"
              "${MINGW_PACKAGE_PREFIX}-python-installer")
-source=("https://pypi.org/packages/source/${_pyname::1}/${_pyname}/${_pyname}-${pkgver}.tar.gz")
-sha256sums=('376d5a00764ac29440a54579f88e66b7d9cb7e629d35c35a1c7248bfebc9b455')
+source=("https://pypi.org/packages/source/${_realname::1}/${_realname/-/_}/${_realname/-/_}-${pkgver}.tar.gz")
+sha256sums=('8511c00a4cad96686af6a6b4143433298beb96105a9379afdc9b0328f4f260c9')
 
 build() {
-  cp -r "${_pyname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
+  cp -r "${_realname/-/_}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
 
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
