--- a/mingw-w64-python-six/PKGBUILD
+++ b/mingw-w64-python-six/PKGBUILD
@@ -7,7 +7,7 @@ provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 pkgver=1.16.0
-pkgrel=5
+pkgrel=6
 pkgdesc="Python 2 and 3 compatibility utilities (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
@@ -17,6 +17,7 @@ msys2_references=(
 url="https://pypi.python.org/pypi/six/"
 license=('MIT')
 depends=("${MINGW_PACKAGE_PREFIX}-python")
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
 source=(https://pypi.io/packages/source/${_realname:0:1}/${_realname}/${_realname}-${pkgver}.tar.gz)
 sha256sums=('1e61c37477a1626458e36f7b1d82aa5c9b094fa4802892072e49de9c60c4c926')
 
