python-pyvisa: Disable dependency check in build command
This fixes ERROR Missing dependencies: wheel

--- a/mingw-w64-python-pyvisa/PKGBUILD
+++ b/mingw-w64-python-pyvisa/PKGBUILD
@@ -34,7 +34,7 @@ prepare() {
 build() {
   msg "Python build for ${MSYSTEM}"
   cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python -m build --wheel --no-isolation
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
 check() {
