python-twisted_iocpsupport: Workaround gcc error with incompatible pointer types

--- a/mingw-w64-python-twisted_iocpsupport/PKGBUILD
+++ b/mingw-w64-python-twisted_iocpsupport/PKGBUILD
@@ -35,7 +35,7 @@ prepare() {
 
 build() {
   cd "${srcdir}/python-build-${MSYSTEM}"
-  CFLAGS+=" -Wno-int-conversion"
+  CFLAGS+=" -Wno-int-conversion -Wno-error=incompatible-pointer-types"
   ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
 }
 
