python-wtforms: update to 3.2.1

--- a/mingw-w64-python-wtforms/PKGBUILD
+++ b/mingw-w64-python-wtforms/PKGBUILD
@@ -4,8 +4,8 @@ _realname=wtforms
 pkgbase=mingw-w64-python-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-python-${_realname}"
          "${MINGW_PACKAGE_PREFIX}-python-${_realname}-docs")
-pkgver=3.1.2
-pkgrel=2
+pkgver=3.2.1
+pkgrel=1
 pkgdesc='A flexible forms validation and rendering library for Python (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -22,6 +22,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-babel"
              "${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-hatchling"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools"
              "${MINGW_PACKAGE_PREFIX}-python-sphinx"
              "${MINGW_PACKAGE_PREFIX}-python-sphinx-issues"
              "${MINGW_PACKAGE_PREFIX}-python-sphinxcontrib-log-cabinet"
@@ -29,7 +30,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-python-babel"
 # We do not use the pypi tarball, as there is no docs directory in it
 #source=("https://pypi.org/packages/source/${_realname::1}/${_realname}/${_realname}-${pkgver}.tar.gz")
 source=("${msys2_repository_url}/archive/${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('4f2e5cb7dd1fe24d533e6f30eb0d677be39605f049d3b117724207efe4417840')
+sha256sums=('151cf8ea3eab3e67b470198fc9bb1a63543c10cbf174f94eef3704a44e98a9a5')
 
 prepare() {
   rm -rf python-build-${MSYSTEM} | true
