libheif: fix symbol visibility

--- a/mingw-w64-libheif/PKGBUILD
+++ b/mingw-w64-libheif/PKGBUILD
@@ -4,7 +4,7 @@ _realname=libheif
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=1.19.1
-pkgrel=1
+pkgrel=2
 pkgdesc="HEIF image decoder/encoder library and tools (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -35,11 +35,17 @@ depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
             echo "${MINGW_PACKAGE_PREFIX}-svt-av1" )
          "${MINGW_PACKAGE_PREFIX}-x265"
          "${MINGW_PACKAGE_PREFIX}-zlib")
-source=("https://github.com/strukturag/libheif/releases/download/v${pkgver}/${_realname}-${pkgver}.tar.gz")
-sha256sums=('994913eb2a29c00c146d6f3d61e07d9ff0d8e9eccb0624d87e4be8b108c74e4b')
+source=("https://github.com/strukturag/libheif/releases/download/v${pkgver}/${_realname}-${pkgver}.tar.gz"
+        "https://github.com/strukturag/libheif/commit/26050190264a1c70d27963712a083ac284267c06.patch")
+sha256sums=('994913eb2a29c00c146d6f3d61e07d9ff0d8e9eccb0624d87e4be8b108c74e4b'
+            '8e609fb6f318f8541eaa4d8c43bfdc8f85e66ab5ee9d7d0c2ff0a7e1f4dd6bb3')
 
 prepare() {
   cd "${_realname}-${pkgver}"
+  
+  # use dllexport for all Windows compilers
+  # https://github.com/strukturag/libheif/commit/26050190264a1c70d27963712a083ac284267c06
+  patch -Np1 -i "${srcdir}"/26050190264a1c70d27963712a083ac284267c06.patch
 }
 
 build() {
