libplist: fix detection of newer Python versions

--- a/mingw-w64-libplist/PKGBUILD
+++ b/mingw-w64-libplist/PKGBUILD
@@ -4,7 +4,7 @@ _realname=libplist
 pkgbase=mingw-w64-${_realname}
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}")
 pkgver=2.6.0
-pkgrel=2
+pkgrel=3
 pkgdesc='A library to handle Apple Property List format in binary or XML (mingw-w64)'
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clangarm64')
@@ -21,16 +21,29 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-cython")
 optdepends=("${MINGW_PACKAGE_PREFIX}-python: Python bindings")
 source=("https://github.com/libimobiledevice/libplist/releases/download/${pkgver}/libplist-${pkgver}.tar.bz2"
+        001-ax_python_devel.patch
         002-dont-include-winmain-in-static.patch
         003-fix-py-soext.patch)
 sha256sums=('67be9ee3169366589c92dc7c22809b90f51911dd9de22520c39c9a64fb047c9c'
+            'cb6837f5dafff50a4a367dc6c71c86b7d40c68a9e676d8b121977a0db13bfdaf'
             'c48f22728e25a78ee70eaf20f559d3119b7c2140ccd1863005214a7c508267e5'
             '3b63489e0dc9bebe6e547bffb0f708275a9d8fc5d789ebc43dca7b61bd63673d')
 
+apply_patch_with_msg() {
+  for _patch in "$@"
+  do
+    msg2 "Applying $_patch"
+    patch -Np1 -i "${srcdir}/$_patch"
+  done
+}
+
 prepare() {
   cd ${srcdir}/${_realname}-${pkgver}
-  patch -p1 -i ${srcdir}/002-dont-include-winmain-in-static.patch
-  patch -p1 -i ${srcdir}/003-fix-py-soext.patch
+  
+  apply_patch_with_msg \
+    001-ax_python_devel.patch \
+    002-dont-include-winmain-in-static.patch \
+    003-fix-py-soext.patch
 
   autoreconf -fiv
 }
