--- a/mingw-w64-fontforge/PKGBUILD
+++ b/mingw-w64-fontforge/PKGBUILD
@@ -39,10 +39,12 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-python-sphinx")
 source=("https://github.com/${_realname}/${_realname}/releases/download/${pkgver}/${_realname}-${pkgver}.tar.xz"
         "fontforge-doc-no-warn-error.patch"
-        "001-no-distutils.patch")
+        "001-no-distutils.patch"
+        "002-update-po-files.patch"::https://github.com/fontforge/fontforge/commit/642d8a3db6d4bc0e70b429622fdf01ecb09c4c10.patch)
 sha256sums=('ca82ec4c060c4dda70ace5478a41b5e7b95eb035fe1c4cf85c48f996d35c60f8'
             'b87fa5a39d6948262d2dfb9b84c2462dc21de0bfb115cdd13e893c1b533d8f78'
-            '9903e4ff6f202cf588d71f23fd8c8a11b88ef9d9e796f8b41305bb27c87e50ea')
+            '9903e4ff6f202cf588d71f23fd8c8a11b88ef9d9e796f8b41305bb27c87e50ea'
+            'ca4e15fca23c14851e74ad2a3551cf8426e46cf6b0c093aab43bea346a656236')
 
 apply_patch_with_msg() {
   for _patch in "$@"
@@ -56,7 +58,8 @@ prepare() {
   cd "${srcdir}/${_realname}-${pkgver}"
   apply_patch_with_msg \
     fontforge-doc-no-warn-error.patch \
-    001-no-distutils.patch
+    001-no-distutils.patch \
+    002-update-po-files.patch
 }
 
 build() {
