Drop python-theano
* unmaintained
* not compatible with Python 3.12
* keras upstream has dropped support for it (though not the version we have)

This likely makes keras not usable anymore, if someone wants to fix it
look into updating keras. It hasn't been updated in a long time in MSYS2,
so likely no one cares.

--- a/mingw-w64-python-keras/PKGBUILD
+++ b/mingw-w64-python-keras/PKGBUILD
@@ -8,7 +8,7 @@ provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 pkgver=2.3.1
-pkgrel=6
+pkgrel=7
 pkgdesc="Keras is a high-level neural networks API, written in Python and capable of running on top of TensorFlow, CNTK, or Theano (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw64' 'ucrt64')
@@ -24,13 +24,11 @@ depends=("${MINGW_PACKAGE_PREFIX}-python"
          "${MINGW_PACKAGE_PREFIX}-python-yaml"
          "${MINGW_PACKAGE_PREFIX}-python-h5py"
          "${MINGW_PACKAGE_PREFIX}-python-keras_applications"
-         "${MINGW_PACKAGE_PREFIX}-python-keras_preprocessing"
-         "${MINGW_PACKAGE_PREFIX}-python-theano")
+         "${MINGW_PACKAGE_PREFIX}-python-keras_preprocessing")
 makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
              "${MINGW_PACKAGE_PREFIX}-python-installer"
              "${MINGW_PACKAGE_PREFIX}-python-setuptools")
-source=(https://pypi.org/packages/source/${_realname::1}/${_realname}/${_pyname}-${pkgver}.tar.gz
-        0001-change-backend-to-theano.patch)
+source=(https://pypi.org/packages/source/${_realname::1}/${_realname}/${_pyname}-${pkgver}.tar.gz)
 sha256sums=('321d43772006a25a1d58eea17401ef2a34d388b588c9f7646c34796151ebc8cc'
             '2e53d3c474d0d797ef7c6faf3ecdc77dfe123fa43bd19a151caaf894baadb47e')
 
@@ -46,8 +44,6 @@ apply_patch_with_msg() {
 prepare() {
   cd "${srcdir}/${_pyname}-${pkgver}"
 
-  apply_patch_with_msg \
-    0001-change-backend-to-theano.patch
 }
 
 build() {
