python-fixtures: build using python-build/installer and fix dependencies

--- a/mingw-w64-python-fixtures/PKGBUILD
+++ b/mingw-w64-python-fixtures/PKGBUILD
@@ -7,70 +7,38 @@ provides=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 conflicts=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 replaces=("${MINGW_PACKAGE_PREFIX}-python3-${_realname}")
 pkgver=4.1.0
-pkgrel=3
+pkgrel=4
 pkgdesc="Fixtures, reusable state for writing clean tests and more (mingw-w64)"
 arch=('any')
 mingw_arch=('mingw32' 'mingw64' 'ucrt64' 'clang64' 'clang32' 'clangarm64')
+url="https://launchpad.net/python-fixtures"
+msys2_repository_url="https://github.com/testing-cabal/fixtures"
 msys2_references=(
   'pypi: fixtures'
 )
-url="https://launchpad.net/python-fixtures"
 license=('spdx:Apache-2.0 OR BSD-3-Clause')
 depends=("${MINGW_PACKAGE_PREFIX}-python"
-         "${MINGW_PACKAGE_PREFIX}-python-pbr"
-         "${MINGW_PACKAGE_PREFIX}-python-six"
-          "${MINGW_PACKAGE_PREFIX}-python-testtools")
-makedepends=("${MINGW_PACKAGE_PREFIX}-python-setuptools")
+         "${MINGW_PACKAGE_PREFIX}-python-pbr")
+makedepends=("${MINGW_PACKAGE_PREFIX}-python-build"
+             "${MINGW_PACKAGE_PREFIX}-python-installer"
+             "${MINGW_PACKAGE_PREFIX}-python-setuptools")
 checkdepends=("${MINGW_PACKAGE_PREFIX}-python-subunit"
-              "${MINGW_PACKAGE_PREFIX}-python-mock")
-options=('staticlibs' 'strip' '!debug')
+              "${MINGW_PACKAGE_PREFIX}-python-testtools")
 source=("https://pypi.io/packages/source/f/fixtures/fixtures-${pkgver}.tar.gz")
-sha512sums=('6897449fdefd07abe7714186b366fdf4505283f6747f8fa4d17044bc45da58eb36e69d89381527ccecb98e6c62c58bc6d4f558af41cbfc87b0221ae60ba71ff6')
-
-# Helper macros to help make tasks easier #
-apply_patch_with_msg() {
-  for _patch in "$@"
-  do
-    msg2 "Applying $_patch"
-    patch -Nbp1 -i "${srcdir}/$_patch"
-  done
-}
-
-del_file_exists() {
-  for _fname in "$@"
-  do
-    if [ -f $_fname ]; then
-      rm -rf $_fname
-    fi
-  done
-}
-# =========================================== #
-
-prepare() {
-  cd "${srcdir}"
-  rm -rf python-build-${MSYSTEM} | true
-  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}"
-
-  # Set version for setuptools_scm
-  export SETUPTOOLS_SCM_PRETEND_VERSION=${pkgver}
-}
+sha256sums=('82b1c5e69f615526ef6c067188a1e6c6067df7f88332509c99f8b8fdbb9776f3')
 
 build() {
-  msg "Python build for ${MSYSTEM}"
-  cd "${srcdir}/python-build-${MSYSTEM}"
-  ${MINGW_PREFIX}/bin/python setup.py build
-}
+  cp -r "${_realname}-${pkgver}" "python-build-${MSYSTEM}" && cd "python-build-${MSYSTEM}"
 
-# This doesn't seem to worky
-#check() {
-#  msg "Python test for ${MSYSTEM}"
-#  cd "${srcdir}/python-build-${MSYSTEM}"
-#  ${MINGW_PREFIX}/bin/python -m testtools.run fixtures.test_suite
-#}
+  ${MINGW_PREFIX}/bin/python -m build --wheel --skip-dependency-check --no-isolation
+}
 
 package() {
   cd "${srcdir}/python-build-${MSYSTEM}"
-  MSYS2_ARG_CONV_EXCL="--prefix=;--install-scripts=;--install-platlib=" \
-  ${MINGW_PREFIX}/bin/python setup.py install --prefix=${MINGW_PREFIX} \
-    --root="${pkgdir}" --optimize=1 --skip-build
+
+  MSYS2_ARG_CONV_EXCL="--prefix=" \
+    ${MINGW_PREFIX}/bin/python -m installer --prefix=${MINGW_PREFIX} \
+    --destdir="${pkgdir}" dist/*.whl
+
+  install -Dm644 COPYING "${pkgdir}"${MINGW_PREFIX}/share/licenses/python-${_realname}/LICENSE
 }
