--- a/mingw-w64-python-keras/PKGBUILD
+++ b/mingw-w64-python-keras/PKGBUILD
@@ -11,7 +11,7 @@ pkgver=2.3.1
 pkgrel=7
 pkgdesc="Keras is a high-level neural networks API, written in Python and capable of running on top of TensorFlow, CNTK, or Theano (mingw-w64)"
 arch=('any')
-mingw_arch=('mingw64' 'ucrt64')
+mingw_arch=()
 url="https://keras.io/"
 msys2_references=(
   'pypi: keras'
