--- a/mingw-w64-wwrando/PKGBUILD
+++ b/mingw-w64-wwrando/PKGBUILD
@@ -26,7 +26,7 @@ optdepends=(
   "${MINGW_PACKAGE_PREFIX}-python-pyfastbti"
   "${MINGW_PACKAGE_PREFIX}-python-pyfasttextureutils"
 )
-source=("https://github.com/LagoLunatic/wwrando/archive/$pkgver/{_realname}-${pkgver}.tar.gz")
+source=("https://github.com/LagoLunatic/wwrando/archive/$pkgver/${_realname}-${pkgver}.tar.gz")
 sha256sums=('9d05501ff5468aa5d790cb10c7daaed50700f81b7254bc9cdbfe3c3f28c50d19')
 
 prepare() {
